[Course Feature 📚] - Add course structure, modules, unified quizzes and access model.
Lands the course authoring foundation the learner quiz flow builds on.

- Course gains structure (FLAT | MODULES), publication status (DRAFT | PUBLISHED)
  and an explicit access type (FREE | PURCHASE | SUBSCRIPTION) instead of
  inferring "paid" from a non-zero price.
- Adds CourseModule, so a course can group its lessons into chapters. Lessons
  keep their course reference either way, which leaves every existing
  course-scoped query working for both structures.
- Adds one polymorphic quiz aggregate (owner_type + owner_id) shared by lesson
  quizzes, module exams and course final exams — one table, one validator, one
  mapper, one synchronizer.
- Splits quiz responses into an instructor view carrying the answer key and a
  learner view whose type has no field able to carry one.
- Course create/update becomes an aggregate operation: modules, lessons,
  quizzes and subscription plans are validated in full before anything is
  written, so a rejected payload never leaves a half-rearranged course behind.
- Adds src/main/resources/db/2026-08-course-structure-and-quizzes.sql, the
  idempotent script that adds the new tables/columns and back-fills rows
  Hibernate's ddl-auto cannot.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012SzeyB5r75tvsbMVCs6WB3